# vulture

./: .env.example  .gitignore  .gitleaks.toml  .pip-audit-ignore  .trivyignore  .vultureignore  AUTHORS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  config.ini.example  create_pr.py  docker-compose.readonly.yml  docker-compose.yml  install.sh  story.md
agents/cwe/: Dockerfile  pyproject.toml
agents/cwe/cwe_agent/: agent.py  catalog.py  config.py  main.py
agents/cwe/cwe_agent/data/: LICENSE.md  cwe_catalog.json  known_vulnerable_versions.json
agents/cwe/cwe_agent/skills/: SKILLS.md  __init__.py  _var_reference.py  access_control_check.py  auth_check.py  buffer_check.py  catalog_detector.py  concurrency_check.py  configuration_check.py  crypto_check.py  dangerous_function_check.py  data_handling_check.py  dependency_check.py  divide_by_zero_check.py  error_handling_check.py  info_exposure_check.py  injection_check.py  input_validation_check.py  insufficient_logging_check.py  memory_safety_check.py  path_equivalence_check.py  plaintext_transmission_check.py  resource_check.py  uncaught_exception_check.py  weak_entropy_check.py  web_security_check.py
agents/cwe/scripts/: promote_signatures.py
agents/cwe/tests/corpus/: LICENSE.md  VERIFIED_CWES.md  corpus_runner.py  gates.yaml  report_coverage.py
agents/cwe/tests/e2e/: test_0057_cwe_llm_on.py  test_cwe_audit.py
agents/cwe/tests/unit/: conftest.py  test_catalog.py  test_catalog_detector.py  test_catalog_detector_perf.py  test_corpus_gates.py  test_corpus_runner.py  test_dangerous_function_check.py  test_divide_by_zero_check.py  test_injection_command_langs.py  test_insufficient_logging_check.py  test_path_equivalence_check.py  test_promote_signatures.py  test_report_coverage_counts.py  test_report_coverage_golden.py  test_signature_detector.py  test_signature_killswitch.py  test_signature_no_double_report.py  test_skills.py  test_uncaught_exception_check.py  test_weak_entropy_check.py
agents/discover/: Dockerfile  SKILLS.md  pyproject.toml
agents/discover/discover_agent/: __init__.py  agent.py  config.py  deep_discovery.py  findings.py  learning_store.py  main.py  source_analyzer.py
agents/discover/discover_agent/plugins/: __init__.py  _shared.py  blockchain_rpc.py  crawl.py  endpoint_validation.py  env_service_urls.py  graphql.py  grpc_reflection.py  infra_config.py  js_bundle.py  llm_suggest.py  mobile_routes.py  mqtt_amqp.py  nextauth_routes.py  nextjs_app_router.py  nextjs_config.py  nextjs_middleware.py  oidc_wellknown.py  openapi.py  playwright_deep.py  raw_http_handlers.py  rpc.py  soap_wsdl.py  source_code.py  sse.py  webhook_receivers.py  websocket.py
agents/discover/tests/e2e/: test_discover_audit.py
agents/discover/tests/unit/: test_agent.py  test_discovery.py  test_learning_store_ext.py  test_plugins.py  test_plugins_extended.py  test_plugins_wave2.py  test_scan_enrichment.py  test_shared_utils.py  test_skills_only_mode.py  test_source_analyzer.py  test_source_analyzer_extended.py
agents/owasp/: Dockerfile  PLAN.md  pyproject.toml
agents/owasp/owasp_agent/: __init__.py  agent.py  config.py  main.py
agents/owasp/owasp_agent/skills/: SKILLS.md  __init__.py  access_control.py  auth_check.py  crypto_check.py  data_integrity.py  injection_check.py  insecure_design.py  logging_check.py  security_misconfig.py  ssrf_check.py  vulnerable_components.py
agents/owasp/tests/e2e/: test_owasp_audit.py
agents/owasp/tests/unit/: test_new_skills.py  test_skills.py
agents/prove/: CLAUDE.md  Dockerfile  SKILLS.md  pyproject.toml
agents/prove/prove_agent/: __init__.py  agent.py  api_prober.py  config.py  discover_client.py  discovery.py  endpoint_analyzer.py  learning_store.py  llm_helper.py  main.py  prove_learnings.py  runner.py  techniques.py
agents/prove/prove_agent/plugins/: __init__.py
agents/prove/prove_agent/protocols/: __init__.py  detection.py  dispatcher.py  fallback.py  grpc_executor.py  jsonrpc_executor.py  ws_executor.py
agents/prove/prove_agent/strategies/: __init__.py  base.py  chaos.py  cwe.py  owasp.py  rule_analyzer.py  shared.py  soc2.py  ssdf.py
agents/prove/tests/e2e/: test_multi_protocol.py
agents/prove/tests/unit/: test_discover_client.py  test_error_classification.py  test_llm_helper.py  test_new_features.py  test_protocols.py  test_prove_architecture.py  test_prove_enhancements.py  test_prove_no_findings.py  test_retry_backoff.py  test_rule_analyzer.py  test_shared.py  test_skills_only_mode.py  test_techniques.py
agents/shared/: pyproject.toml
agents/shared/shared/: __init__.py  audit_runner.py  base_agent.py  cancellation.py  env.py
agents/shared/shared/discovery/: __init__.py  cache.py  helpers.py  plugin_base.py  runner.py  sitemap.py
agents/shared/shared/llm/: __init__.py  cooldown.py  errors.py  health.py  loop_detector.py  loop_guard.py  mode.py  provider.py
agents/shared/shared/models/: __init__.py  audit_request.py  audit_result.py  finding.py
agents/shared/shared/tools/: __init__.py  ast_parser.py  confine.py  dependency_checker.py  file_lister.py  file_reader.py  file_scanner.py  git_history.py  memory_client.py  obfuscation.py  pattern_matcher.py  snippet.py  suppression.py
agents/shared/shared/transport/: __init__.py  event_emitter.py  sse_app.py
agents/shared/shared/validate/: SKILLS.md  __init__.py  (+8 more)
agents/shared/tests/: _fake_llm.py
agents/soc2/: Dockerfile  pyproject.toml
agents/soc2/soc2_agent/: __init__.py  agent.py  config.py  main.py
agents/xss/: Dockerfile  pyproject.toml
agents/xss/xss_agent/: INSTRUCTIONS.md  __init__.py  agent.py  config.py  main.py
mcp/: README.md  pyproject.toml  server.py
mcp/tests/: conftest.py  test_client.py  test_redaction.py  test_tools.py
plugins/semgrep/: Dockerfile  README.md  plugin.toml  pyproject.toml
plugins/semgrep/rules/: prefix_to_cwe.json  rule_to_cwe.json
plugins/semgrep/src/: __init__.py  sse.py  translate.py  wrapper.py
plugins/semgrep/tools/: README.md  semgrep_rules_to_cwe.py
(+1146 files in other folders)
