[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vulture-mcp"
version = "0.1.0"
description = "MCP server for Vulture compliance audit platform"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "mcp>=1.20.0",
    "httpx>=0.27.0",
]

[project.scripts]
vulture-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["server.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]
