[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vulture-cwe-agent"
version = "0.1.0"
description = "CWE Weakness audit agent for Vulture"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "vulture-shared",
]

[tool.hatch.build.targets.wheel]
packages = ["cwe_agent"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "anyio[trio]>=4.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["cwe_agent"]

[tool.ruff]
target-version = "py312"
line-length = 100
# Corpus fixtures are intentionally-incomplete VULNERABLE code samples, scanned
# as text by the corpus runner (never imported/executed). They legitimately
# reference undefined framework symbols (e.g. StaticHandler), so do not lint
# them as real modules.
extend-exclude = ["tests/corpus/fixtures"]
