[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vulture-prove-agent"
version = "0.1.0"
description = "Prove companion agent for autonomous finding verification"
requires-python = ">=3.12"
dependencies = [
    "vulture-shared",
    "httpx>=0.28.0",
    "websockets>=13.0",
    "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["prove_agent"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "anyio[trio]>=4.0.0",
    "respx>=0.22.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["prove_agent"]
