[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vulture-shared"
version = "0.1.0"
description = "Shared library for Vulture audit agents"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "openai-agents>=0.0.7",
    "litellm>=1.50.0",
    "sse-starlette>=2.1.0",
    "httpx>=0.28.0",
    "tiktoken>=0.7.0",
    "pathspec>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "radon>=6.0.0",
    "anyio[trio]>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["shared"]

[tool.pytest.ini_options]

asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.coverage.run]
source = ["shared"]
