[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vulture-xss-agent"
version = "0.1.0"
description = "XSS vulnerability scanner agent for Vulture"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "vulture-shared",
]

[tool.hatch.build.targets.wheel]
packages = ["xss_agent"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "anyio[trio]>=4.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["xss_agent"]
